========================
0.0.82
========================

- added a watcher for `bundles.debug`
- fixed `res.proxy()`

========================
0.0.81
========================

- extended the schema object by adding `.actions = {}` property (with all defined actions)
- added `NEWACTION()` method that offers awesome functionality for independent actions in the schema
- removed unused `CONF.logger`
- improved API routing in the form `ROUTE('API /api/ +action_name')`;
- added in-memory cache support for the `schema.action()` and `NEWACTION()`
- improved `F.cache.removeAll()` by adding support for string array
- fixed empty value in enum validation in JSON Schemas
- improved the `CORS()` method `CORS('https://.., https://..')` that allows only the specific hostnames
- fixed atomic operations in NoSQL QueryBuilder
- added `String.sign(key)` for making of quick checksums
- added `DB().load([conn], opt)` for loading of prepared QueryBuilder queries
- fixed encoding config values `@{'%something'}` in the view engine
- fixed multiple outputs in for the actions
- fixed parser for macros
- improved macros by adding async operations
- added `QueryBuilder` as a global variable (due to extending prototype)
- added `QueryBuilderDB` as a global variable (due to extending prototype)

========================
0.0.80
========================

- added `CONF.default_tms_maxlength` option
- improved the `NEWSUBSCRIBE(name, schema, [callback])` method by adding the `callback` argument
- added `inmemory` database support for `QueryBuilder`
- fixed localized filters in `QueryBuilder.autoquery()`
- extended the `schema.action({ ..sa: true }, ...)` method by adding `sa` option
- improved error handling in the `FlowStream`
- fixed parsing inline JSON schemas
- added `wav` as the allowed static file
- added support for the `.ui` file extension (json --> UI builder)

========================
0.0.79
========================

- fixed parsing of nested JSON schemas defined